--- a/lib/code_fund_web/templates/campaign/form.html.eex
+++ b/lib/code_fund_web/templates/campaign/form.html.eex
@@ -8,6 +8,7 @@
     bid_amount: [type: :currency_input, label: "Bid Amount"],
     budget_daily_amount: [type: :currency_input, label: "Daily Budget"],
     budget_monthly_amount: [type: :currency_input, label: "Monthly Budget"],
-    budget_total_amount: [type: :currency_input, label: "Total Budget"]
+    budget_total_amount: [type: :currency_input, label: "Total Budget"],
+    override_revenue_rate: [type: :currency_input, label: "Override Revenue Rate"]
   ] |> render_fields(@form)
 %>
